welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:2: error: not found: value Max
  var x = Max(nums(0),nums(1))
          ^max2Value:3: error: not found: value Min
  var y = Min(nums(0),nums(1))
          ^