welcome.lessons.welcome.array.search.SecondMaxValue.scala.code
def max2Value(nums:Array[Int]): Int = {
  var x = Max(nums(0),nums(1))
  var y = Min(nums(0),nums(1))
  for (i<-0 to (nums.length-1)) {
    if (nums(i)>x) {
      y=x
      x=nums(i)
    }
  }
  x
}